més o menys funcionant excepte tot